--- a/Puchko_Ivar/index.html
+++ b/Puchko_Ivar/index.html
@@ -174,7 +174,7 @@
 							<div class="about-band_line_color_content_line_titlebox_5">
 								<div class="about-band_line_color_content_line_titlebox_5_photo"></div>
 								<div class="about-band_line_color_content_line_titlebox_5_text">
-									<p>Artem Kovalskiy</p>
+									<p>Artem Kovalskiy Лох</p>
 									<div class="about-band_line_color_content_line_titlebox_5_text_line"></div>
 									<div class="about-band_line_color_content_line_titlebox_5_text1">
 										Age: 18<br>
