--- a/Puchko_Ivar/index.html
+++ b/Puchko_Ivar/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ivar</title>
+	<title>Prince</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 		<div class="header_line">
 			<div class="header_line_color">
 				<div class="header_line_color_content">
-					<p>Ivar</p>
+					<p>Prince</p>
 					<a href="albums.html"><button>Albums</button></a>	
 					<a href="discography.html"><button>Discography</button></a>
 					<a href="about-band.html"><button>About band</button></a>
@@ -174,7 +174,7 @@
 							<div class="about-band_line_color_content_line_titlebox_5">
 								<div class="about-band_line_color_content_line_titlebox_5_photo"></div>
 								<div class="about-band_line_color_content_line_titlebox_5_text">
-									<p>Artem Kovalskiy Лох</p>
+									<p>Artem Kovalskiy</p>
 									<div class="about-band_line_color_content_line_titlebox_5_text_line"></div>
 									<div class="about-band_line_color_content_line_titlebox_5_text1">
 										Age: 18<br>
